# practice-opengl-es2

./: README.md
egl/: CMakeLists.txt  README.md  main.cpp
egl/src/app/: app.cpp  app.h
egl/src/app/shader/: a.frag  a.vert  shader.h
egl/src/base/: logging.h
egl/src/egl/: aegl.cpp  aegl.h  egl.cpp
egl/src/gles2/: shader.cpp  shader.h  texture.cpp  texture.h
egl/src/gles2/egl/: dma_buffer_texture.cpp  dma_buffer_texture.h
egl/src/v4l2/: v4l2_device.cpp  v4l2_device.h
egl/src/window/: awindow.h  awindow_x11.cpp  awindow_x11.h
webgl/: .eslintrc.json  README.md  package.json  tsconfig.json  webpack.config.js
webgl/public/: index.html
webgl/src/: main.ts
webgl/src/sample1/: main.ts  renderer.ts
webgl/src/sample2/: color.ts  entity.ts  main.ts  renderer.ts  shape.ts  shape_factory.ts
x/: a.dot  build.sh  ffmpeg.c
